[package]
name = "compiler-course-helper"
version = "0.1.0"
authors = ["zuyumi <zuyumi@sustech.moe>"]
keywords = ["compiler"]
edition = "2021"
repository = "https://github.com/zuyumi/compiler-course-helper"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"