[package]
name = "compiler-course-helper"
description = "A tool & library to help you with the compiler course."
version = "0.1.0"
authors = ["zuyumi <zuyumi@sustech.moe>"]
keywords = ["compiler", "education"]
edition = "2021"
repository = "https://github.com/zuyumi/compiler-course-helper"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "compiler-course-helper"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.79"
crowbook-text-processing = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"